--- a/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
+++ b/CrmPackage/WebResources/Web Page (HTML)/arup_opportunitybuttons.html
@@ -1,73 +1,77 @@
 ﻿<html>
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
 
-	<style type="text/css">
+    <style type="text/css">
 
-		body {
-			margin: 0px;
-		}
+        body {
+            margin: 0px;
+        }
 
-		.inactiveTab:hover {
-			cursor: hand;
-		}
+        .inactiveTab:hover {
+            cursor: hand;
+        }
 
-		.activeTab:hover {
-			cursor: hand;
-		}
+        .activeTab:hover {
+            cursor: hand;
+        }
 
-		.inactiveTab:hover {
-			background-color: #C2C2C2;
-		}
+        .inactiveTab:hover {
+            background-color: #C2C2C2;
+        }
 
-		.inactiveTab {
-			background-color: #F3F3F3;
-			color: #000000;
-			font-family: Segoe UI, Tahoma, Arial;
-			font-size: 12px;
-			padding: 5px 10px 5px 10px;
-			margin: 0px 4px 4px 0px;
-			width: 240px;
-			text-overflow: ellipsis;
-			display: inline-block;
-			text-align: center;
-			overflow: hidden;
-			white-space: nowrap;
-		}
+        .inactiveTab {
+            background-color: #F3F3F3;
+            color: #000000;
+            font-family: Segoe UI, Tahoma, Arial;
+            font-size: 12px;
+            padding: 5px 10px 5px 10px;
+            margin: 0px 4px 4px 0px;
+            width: 240px;
+            text-overflow: ellipsis;
+            display: inline-block;
+            text-align: center;
+            overflow: hidden;
+            white-space: nowrap;
+        }
 
-		.activeTab {
-			background-color: #7A7A7A;
-			color: #FFFFFF;
-			font-family: Segoe UI, Tahoma, Arial;
-			font-size: 12px;
-			padding: 5px 10px 5px 10px;
-			margin: 0px 4px 0px 0px;
-			width: 240px;
-			text-overflow: ellipsis;
-			display: inline-block;
-			text-align: center;
-			overflow: hidden;
-			white-space: nowrap;
-		}
-	</style>
+        .activeTab {
+            background-color: #7A7A7A;
+            color: #FFFFFF;
+            font-family: Segoe UI, Tahoma, Arial;
+            font-size: 12px;
+            padding: 5px 10px 5px 10px;
+            margin: 0px 4px 0px 0px;
+            width: 240px;
+            text-overflow: ellipsis;
+            display: inline-block;
+            text-align: center;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+    </style>
 
-	<script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
-	<script>
+    <script src="ClientGlobalContext.js.aspx" type="text/javascript"></script>
+    <script>
 
-        pinnedTabs = ['tab_pjncosts', 'tab_summary', 'tab_projfinacials', 'tab_biddetails', 'tab_biddevelopment'];
+        staticTabs = ['tab_pjncosts', 'tab_summary', 'tab_projfinacials', 'tab_biddetails', 'tab_biddevelopment'];
 
-        buttonConfig = {
+        buttonConfigs = {
             'tab_prebid': [
                 {
+                    'id': "btnApprove",
                     'label': 'Approve Decision to Bid',
-                    'action': function() { alert("Approve decisionto Bid") }
+                    'action': 'alert("Approve decisionto Bid")'
                 },
                 {
+                    'id': "btnNextStage",
                     'label': 'Move to Next Stage',
-                    'action': function() { alert("Move to next stage") }
+                    'action': 'alert("Move to next stage")'
                 }
             ]
         };
+
+
 
         function activateTab(tab) {
 
@@ -83,7 +87,7 @@
                 }
             }
 
-            loopTabs(tab, pinnedTabs.concat(tab), true, null);
+            loopTabs(tab, staticTabs.concat(tab), true, null);
 
         }
 
@@ -117,42 +121,76 @@
                 }
             }
         }
-	</script>
-	<meta>
-	<meta>
-	<meta>
-	<meta>
-	<meta>
-	<meta>
-	<meta>
+    </script>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
+    <meta>
 </head>
 
 <body style="word-wrap: break-word;">
-	<div id="tabButtons">*Show dynamic buttons here*</div>
+    <div id="tabButtons"></div>
 
-	<script>
-//if (parent.Xrm.Page.ui.getFormType() != 1) {
+    <script>
 
-    var tabs = parent.Xrm.Page.ui.tabs.get();
-    for (var t in tabs) {
-        var tab = tabs[t];
-        var tabStyle = "inactiveTab";
-        if (t == 0) {
-            tabStyle = "activeTab";
+        // When loaded
+        // - Work out which tab is currently active.
+        var tabs = parent.Xrm.Page.ui.tabs.get();
+        var activeTab = null;
+        for (var t in tabs) {
+            var tab = tabs[t];
+            if (tab.getDisplayState() == "expanded") {
+                activeTab = t;
+            } else {
+                if (staticTabs.includes(t)) {
+                    tab.setVisible(true);
+                } else {
+                    tab.setVisible(false);
+                }
+            }
+        }
+        // - generate buttons appropriate to that tab.
+        var buttonConfig = buttonConfigs[tab.getName()];
+        if (buttonConfigs != null) {
+            // Generate buttons listed in buttonConfig.
+            for (button in buttonConfig) {
+                document.getElementById("tabButtons").innerHTML = document.getElementById("tabButtons").innerHTML +
+                    "<span class=activeTab" +
+                    " id=\"" +
+                    tab.id +
+                    "\" onclick=\"" + button.action +
+                    ";\">" +
+                    button.label
+                "</span>";
+            }
         }
 
-        if (  ! pinnedTabs.includes(tab.getName()))
-            document.getElementById("tabButtons").innerHTML = document.getElementById("tabButtons").innerHTML +
-                "<span class=" +
-                tabStyle +
-                " id=\"" +
-                tab.getName() +
-                "\" onclick=\"activateTab('" +
-                tab.getName() +
-                "');\">" +
-                tab.getLabel() +
-                "</span>";
-    }
-	</script>
+        //if (parent.Xrm.Page.ui.getFormType() != 1) {
+
+        if (0) {
+            for (var t in tabs) {
+                var tab = tabs[t];
+                var tabStyle = "inactiveTab";
+                if (t == 0) {
+                    tabStyle = "activeTab";
+                }
+
+                if (!staticTabs.includes(tab.getName()))
+                    document.getElementById("tabButtons").innerHTML = document.getElementById("tabButtons").innerHTML +
+                        "<span class=" +
+                        tabStyle +
+                        " id=\"" +
+                        tab.getName() +
+                        "\" onclick=\"activateTab('" +
+                        tab.getName() +
+                        "');\">" +
+                        tab.getLabel() +
+                        "</span>";
+            }
+        }
+    </script>
 </body>
 </html>
